--- a/Westerplatte1939/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Westerplatte1939/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -297,7 +297,7 @@ PostProcessVolume=PostProcessVolume.Lens.Lens,
 BrushComponent=PostProcessVolume.Lens.Lens,
 StaticMeshActor=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 InstancedFoliageActor=PostProcessVolume.Lens.Lens
-SceneComponent=
+SceneComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 DirectionalLight=PostProcessVolume.Lens.Lens,
 Actor=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 BillboardComponent=PostProcessVolume.Lens.Lens
@@ -315,14 +315,14 @@ Info=PostProcessVolume.Lens.Lens,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 WaterRuntimeSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.TurnAround,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.DropItem,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,
 WaterEditorSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.TurnAround,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.DropItem,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,
-Landscape=PostProcessVolume.Lens.Lens,
+Landscape=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 WaterBodyOceanComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 WaterBrushManager=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 WaterBodyOcean=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 WaterZone=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 MeshComponent=PostProcessVolume.Lens.Lens,
 PrimitiveComponent=
-CapsuleComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
+CapsuleComponent=
 PlayerStart=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 Crate_C=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 
@@ -2645,7 +2645,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/PickUps
+ContentBrowserDrawer.SelectedPaths=/Game/Gamemodes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2898,9 +2898,9 @@ MeshComponent=
 PrimitiveComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PickUps/Crate
-MRUItem1=/Game/PickUps/Weapon
-MRUItem2=/Game/Modele/statekNiem
+MRUItem0=/Game/Modele/statekNiem
+MRUItem1=/Game/PickUps/Crate
+MRUItem2=/Game/PickUps/Weapon
 MRUItem3=/Game/Maps/Ship
 MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
 MRUItem5=/Engine/BasicShapes/Cube
@@ -2982,6 +2982,8 @@ bEnableInputTriggerSupportWarnings=False
 /Game/PickUps/Weapon.Weapon=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Water.WaterBodyOcean;/Engine/Transient.WaterBodyOceanActorFactory_0
 RecentlyPlaced=/Game/PickUps/Crate.Crate;
 RecentlyPlaced=/Game/PickUps/Weapon.Weapon;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
@@ -2989,9 +2991,7 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Modele/statekNiem.statekNiem;
 RecentlyPlaced=/Game/Modele/test/statekNiem.statekNiem;
-RecentlyPlaced=/Script/Water.WaterBodyOcean;/Engine/Transient.WaterBodyOceanActorFactory_0
 RecentlyPlaced=/Script/Water.WaterBodyCustom;/Engine/Transient.WaterBodyCustomActorFactory_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
