--- a/Westerplatte1939/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Westerplatte1939/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -292,22 +292,22 @@ BP_firstplayer_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Camer
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 FbxImportUI=FbxImportUI.Mesh.Thresholds,
 StaticMesh=StaticMesh.Collision.Collision,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,
-SkeletalMeshComponent=
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 BrushComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 StaticMeshActor=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 InstancedFoliageActor=PostProcessVolume.Lens.Lens
-SceneComponent=
+SceneComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 DirectionalLight=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 Actor=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
-BillboardComponent=PostProcessVolume.Lens.Lens
+BillboardComponent=
 PointLight=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 BP_Sky_Sphere_C=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
-StaticMeshComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
+StaticMeshComponent=
 SkyAtmosphere=PostProcessVolume.Lens.Lens,
 SkyLight=PostProcessVolume.Lens.Lens,
 AmmoCrate_C=PostProcessVolume.Lens.Lens
-Weapon_C=
+Weapon_C=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 SphereReflectionCapture=PostProcessVolume.Lens.Lens
 Blueprint=PostProcessVolume.Lens.Lens
 wep_C=PostProcessVolume.Lens.Lens
@@ -322,7 +322,7 @@ WaterBodyOcean=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 WaterZone=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 MeshComponent=PostProcessVolume.Lens.Lens,
 PrimitiveComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
-CapsuleComponent=
+CapsuleComponent=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 PlayerStart=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,CapsuleComponent.Collision.Collision,
 Crate_C=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 SceneCaptureComponentCube=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
@@ -345,6 +345,11 @@ Projectile_C=
 SphereComponent=SphereComponent.Collision.Collision,
 Bullet_C=PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
+EdGraph=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
+SkinnedMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
+K2Node_FunctionEntry=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
+K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
+SpringArmComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,PostProcessVolume.Lens.Lens,WaterBodyOcean.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Ship
@@ -1390,6 +1395,8 @@ SkeletonEditor.TimeStamp=2022.12.11-11.49.27
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.12.11-11.49.25
 PinnedCommandList.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2022.12.11-11.49.25
+PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2858,6 +2865,32 @@ K2Node_CustomEvent.GraphNodeDetail=True
 K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 StaticMeshSocket.StaticMeshSocket=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+Weapon_C.Default=True
+BP_firstplayer_C.Networking=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+SkeletalBodySetup.Physics=True
+SkeletalBodySetup.Collision=True
+SkeletalBodySetup.BodySetup=True
+PhysicsAssetEditorOptions.Anim=True
+PhysicsAssetEditorOptions.Simulation=True
+PhysicsAssetEditorOptions.MouseSpring=True
+PhysicsAssetEditorOptions.Poking=True
+PhysicsAssetEditorOptions.Clothing=True
+FbxExportOption.Exporter=True
+FbxExportOption.Mesh=True
+FbxExportOption.StaticMesh=True
+FbxExportOption.SkeletalMesh=True
+FbxExportOption.Animation=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2877,7 +2910,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Objects
+ContentBrowserDrawer.SelectedPaths=/Game/BasicPlayer
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2902,7 +2935,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/BasicPlayer
+ContentBrowserTab1.SelectedPaths=/Game/Modele
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2937,6 +2970,8 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+GlobalAssetPicker.ThumbnailSize=2
+GlobalAssetPicker.CurrentViewType=0
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3104,8 +3139,8 @@ BP_firstplayer_C=
 firstplayer=
 Character=
 Pawn=
-PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+PreviewMeshCollection=
+DataAsset=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
 Statek_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMesh=
@@ -3127,34 +3162,36 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 TakeRecorderProjectSettings="\"Object.Take Recorder.Settings.DefaultTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1].DefaultPropertyTracks\" "
 WaterBodyOcean="\"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Wave.WaterWaves.Object.Water Waves Asset\" "
 WaterBody="\"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Wave.WaterWaves.Object.Water Waves Asset\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
 SphereComponent=
 ShapeComponent=
 CapsuleComponent=
+SkeletalMeshComponent=
+SkinnedMeshComponent=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/BasicPlayer/BP_firstplayer
 MRUItem1=/Game/Objects/Weapon
-MRUItem2=/Game/Modele/bron_dluga
-MRUItem3=/Game/Objects/Bullet
-MRUItem4=/Game/Objects/Projectile
-MRUItem5=/Game/Modele/statekNiem
-MRUItem6=/Game/StarterContent/Props/Materials/M_Statue
-MRUItem7=/Game/Modele/Metal
-MRUItem8=/Game/StarterContent/Materials/M_Wood_Walnut
-MRUItem9=/Game/Modele/Material
-MRUItem10=/Game/PickUps/Crate
-MRUItem11=/Game/PickUps/Weapon
-MRUItem12=/Game/BasicPlayer/ShipPlayer
-MRUItem13=/Game/Modele/people_Skeleton
-MRUItem14=/Game/Modele/people
-MRUItem15=/Game/Modele/Dial_Glass
-MRUItem16=/Game/Modele/Label
-MRUItem17=/Game/Modele/LightBulb
-MRUItem18=/Game/Modele/Dial_White
-MRUItem19=/Game/Modele/ChromedMetal
+MRUItem2=/Game/Maps/Ship
+MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem4=/Game/Modele/bron_dluga
+MRUItem5=/Game/Modele/bron_dluga_skeletal
+MRUItem6=/Game/Modele/bron_dluga_skeletal_bron_dluga_PhysicsAsset
+MRUItem7=/Game/Modele/bron_dluga_Skeleton
+MRUItem8=/Game/Modele/bron_dluga_PhysicsAsset
+MRUItem9=/Game/Objects/Bullet
+MRUItem10=/Game/Objects/Projectile
+MRUItem11=/Game/Modele/statekNiem
+MRUItem12=/Game/StarterContent/Props/Materials/M_Statue
+MRUItem13=/Game/Modele/Metal
+MRUItem14=/Game/StarterContent/Materials/M_Wood_Walnut
+MRUItem15=/Game/Modele/Material
+MRUItem16=/Game/PickUps/Crate
+MRUItem17=/Game/PickUps/Weapon
+MRUItem18=/Game/BasicPlayer/ShipPlayer
+MRUItem19=/Game/Modele/people_Skeleton
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3231,12 +3268,18 @@ bEnableInputTriggerSupportWarnings=False
 /Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut=1
 /Game/StarterContent/Props/Materials/M_Statue.M_Statue=1
 /Game/Objects/Bullet.Bullet=1
+/Game/Modele/bron_dluga_Skeleton.bron_dluga_Skeleton=1
+/Game/Modele/bron_dluga_PhysicsAsset.bron_dluga_PhysicsAsset=1
+/Game/Modele/bron_dluga_skeletal.bron_dluga_skeletal_bron_dluga=1
+/Game/Modele/bron_dluga_skeletal.bron_dluga_skeletal_UCX_bron_dluga=1
+/Game/Modele/bron_dluga_skeletal_bron_dluga_PhysicsAsset.bron_dluga_skeletal_bron_dluga_PhysicsAsset=1
 
 [PlacementMode]
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/BasicPlayer/BP_firstplayer.BP_firstplayer;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Game/Modele/statekNiem.statekNiem;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Modele/statekNiem.statekNiem;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Objects/Projectile.Projectile;
 RecentlyPlaced=/Game/Objects/Crate.Crate;
@@ -3252,7 +3295,6 @@ RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
 RecentlyPlaced=/Script/AugmentedReality.ARSkyLight;
 RecentlyPlaced=/Game/BasicPlayer/Statek.Statek;
-RecentlyPlaced=/Game/Modele/bron_dluga.bron_dluga;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -3277,8 +3319,8 @@ UNR=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
 BRUSH=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
 FBX=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
 FBXAnim=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
-GenericImport=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
-GenericExport=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
+GenericImport=C:/Users/Lukasz/Desktop/bron_dluga_skeletal.FBX
+GenericExport=C:/Users/Lukasz/Desktop/bron_dluga.FBX
 GenericOpen=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
 GenericSave=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
 MeshImportExport=C:/Users/Lukasz/Documents/GitHub/Westerplatte-1939/Westerplatte1939/Content/
@@ -3293,8 +3335,9 @@ RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_u
 
 [MRU]
 MRUItem0=/Game/Maps/Ship
-MRUItem1=/Game/Maps/ShipMap
-MRUItem2=/Game/StarterContent/Maps/Minimal_Default
+MRUItem1=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem2=/Game/Maps/ShipMap
+MRUItem3=/Game/StarterContent/Maps/Minimal_Default
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -3304,7 +3347,7 @@ DeleteConfirmationVariable_Warning=False
 ChangeVariableType_Warning=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.EditorStyleSettings]
 bColorVisionDeficiencyCorrection=False
@@ -3361,7 +3404,7 @@ BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
 bPauseAnimationOnCameraMove=False
 bUseInlineSocketEditor=False
 bFlattenSkeletonHierarchyWhenFiltering=False
-bHideParentsWhenFiltering=False
+bHideParentsWhenFiltering=True
 bExpandTreeOnSelection=True
 bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
 bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
@@ -3401,12 +3444,16 @@ StaticMeshActor.Cooking=True
 StaticMeshActor.HLOD=True
 StaticMeshActor.Lighting=True
 StaticMeshActor.Materials=False
+Weapon_C.Actor=True
+SkeletalMeshComponent.Collision=False
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3423,8 +3470,8 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=True
-bImportTextures=True
+bImportMaterials=False
+bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3706,4 +3753,16 @@ ShowUnusedLayers=True
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[FBX_Export_UI_Option_FbxExportOption]
+FbxExportCompatibility=FBX_2013
+bASCII=False
+bForceFrontXAxis=False
+VertexColor=True
+LevelOfDetail=True
+Collision=True
+bExportMorphTargets=True
+bExportPreviewMesh=False
+MapSkeletalMotionToRoot=False
+bExportLocalTime=True
 
