--- a/Westerplatte1939/Config/DefaultEngine.ini
+++ b/Westerplatte1939/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Ship.Ship
+GameDefaultMap=/Game/Maps/Menu.Menu
 
 
-EditorStartupMap=/Game/Maps/Ship.Ship
+EditorStartupMap=/Game/Maps/Menu.Menu
 GlobalDefaultGameMode=/Game/Gamemodes/BP_Westerplatte1939GameModeBase.BP_Westerplatte1939GameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
