japierdole naprawianie AI

--- a/Westerplatte1939/Config/DefaultEngine.ini
+++ b/Westerplatte1939/Config/DefaultEngine.ini
@@ -57,6 +57,8 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Westerplatte1939")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Westerplatte1939")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="Westerplatte1939GameModeBase")
+bUseFixedFrameRate=False
+FixedFrameRate=255.474228
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -128,4 +130,16 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+CategorySlot8=Eight
+CategorySlot9=Nine
 
