--- a/Westerplatte1939/Config/DefaultEngine.ini
+++ b/Westerplatte1939/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Maps/Menu.Menu
 
 
-EditorStartupMap=/Game/Maps/Menu.Menu
+EditorStartupMap=/Game/Maps/Ship.Ship
 GlobalDefaultGameMode=/Game/Gamemodes/BP_Westerplatte1939GameModeBase.BP_Westerplatte1939GameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -128,4 +128,17 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot4=Four
+CategoryRowNextKey=One
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+CategorySlot8=Eight
+CategorySlot9=Nine
 
